Fixing Post tile on mobile responsiveness to allow less width and still display user profile card and homepage card while also centering post tiles to screen

--- a/frontend/src/components/Communities/CommunityWidget/CommunityWidget.css
+++ b/frontend/src/components/Communities/CommunityWidget/CommunityWidget.css
@@ -9,11 +9,11 @@
     height: fit-content;
 }
 
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
     .Comm-Widget {
         display: none;
     }
-}
+} */
 
 .Comm-Widget2 {
     display: flex;
